pdf update; small fixes

--- a/Documents/FindingRedundantTestExamples.tex
+++ b/Documents/FindingRedundantTestExamples.tex
@@ -74,7 +74,7 @@ U radu će biti iznet detaljan proces razmišljanja, testiranja i kreiranja meto
 \label{sec:definition}
 Da bismo mogli vršiti pronalaženje redudantnih testova u projektu prvo moramo odlučiti šta tačno čini neki test redudantnim. Nije lako odrediti kriterijume sličnosti neka dva testa pogotovo što oni nekada mogu biti i subjektivni. Neka opšta definicija bi mogla da glasi: test je redudantan u odnosu na drugi ako ispituje potpuno istu funkcionalnost programa i daje isti rezultat. Sada je potrebno precizirati šta podrazumevamo pod istom funkcinalnošću i istim rezultatom.
 
-Ukoliko posmatramo funkciju koja na osnovu datuma određuje naredni dan ona će po potrebi vrišiti uvećanja meseca ili godine ukolko je ulaz poslednji dan u nekom mesecu ili godini. Postoje instrukcije koje se neće izvršiti prilikom svakog poziva funkcije i zbog toga će postojati testovi koji pokrivaju sve kritične delove koda. Prema tome kada govorimo o istoj funkcionalnosti možemo zapravo govoriti o tome da li su izvršene iste naredbe u kôdu. Ovo nas navodi na ideju da proveru redudantnih testova možemo vršiti preko provere koje tačno naredbe kôda neki test izvršava. Ovakvo ispitivanje pokrivenosti kôda predstavlja poptuno objektivu meru. Međutim ovaj pristup provere redudantnosti sa sobom nosi određena ograničenja i poteškoće.
+Ukoliko posmatramo funkciju koja na osnovu datuma određuje naredni dan ona će po potrebi vrišiti uvećanja meseca ili godine ukolko je ulaz poslednji dan u nekom mesecu ili godini. Postoje instrukcije koje se neće izvršiti prilikom svakog poziva funkcije i zbog toga će postojati testovi koji pokrivaju sve kritične delove kôda. Prema tome kada govorimo o istoj funkcionalnosti možemo zapravo govoriti o tome da li su izvršene iste naredbe u kôdu. Ovo nas navodi na ideju da proveru redudantnih testova možemo vršiti preko provere koje tačno naredbe kôda neki test izvršava. Ovakvo ispitivanje pokrivenosti kôda predstavlja poptuno objektivu meru. Međutim ovaj pristup provere redudantnosti sa sobom nosi određena ograničenja i poteškoće.
 
 \subsection{Ista pokrivenost kod različitih rezultata}
 
@@ -86,13 +86,13 @@ int paran1(int n) {
 }
 \end{lstlisting}
 
-Za bilo koju ulaznu vrednost ove funkcije izvršiće se putpuno iste naredbe tj. izvršiće se ista i jedina linija koda. Prema tome ukoliko već postoji test koji proverava navedenu funkciju za neku proizvoljnu vrednost onda će svaki drugi test biti redudantan u odnosu na već postojeći (ukoliko se ograničimo samo na pokrivenost ove funkcije). Tada će takav test samo ispitati da li se izvršila naredba računanja ostatka, a ne i tumačenje samog rezultata pa se postavlja pitanje da li je takav test dovoljan. Ukoliko želimo da vidimo da li je rezultat smislen vršićemo proveru ne u samoj funkciji već nakon njenog poziva. Takva provera podrazumeva grananje koje daje odgovor da li je rezultat ispravan što izaziva pokrivenost razlčitih linija. Međutim ukoliko se naš način provere pokrivenosti ograničava samo na tu funkciju onda možemo dobiti i lažno pozitivan rezultat. Dobijanje iste pokrivenosti za različite rezultate predstavlja jedan od nedostataka ovog pristupa.
+Za bilo koju ulaznu vrednost ove funkcije izvršiće se putpuno iste naredbe tj. izvršiće se ista i jedina linija kôda. Prema tome ukoliko već postoji test koji proverava navedenu funkciju za neku proizvoljnu vrednost onda će svaki drugi test biti redudantan u odnosu na već postojeći (ukoliko se ograničimo samo na pokrivenost ove funkcije). Tada će takav test samo ispitati da li se izvršila naredba računanja ostatka, a ne i tumačenje samog rezultata pa se postavlja pitanje da li je takav test dovoljan. Ukoliko želimo da vidimo da li je rezultat smislen vršićemo proveru ne u samoj funkciji već nakon njenog poziva. Takva provera podrazumeva grananje koje daje odgovor da li je rezultat ispravan što izaziva pokrivenost razlčitih linija. Međutim ukoliko se naš način provere pokrivenosti ograničava samo na tu funkciju onda možemo dobiti i lažno pozitivan rezultat. Dobijanje iste pokrivenosti za različite rezultate predstavlja jedan od nedostataka ovog pristupa. Tipičan primer u kojem sa javlja ova situacija je prilkom provere za granične vrednosti parametara (0, INT\_MAX, INT\_MIN i sl.).
 
 Ukoliko neki test pada onda postoji greška u kôdu koju je potrebno ispraviti pre same provere redudantnosti testova. U nastavku se podrazumeva pretpostavka da svi testovi prolaze i ne dovodi se u pitanje da li je pokrivenost testova potpuna već se samo vrši provera suvišnih testova među već postojećim. 
 
 \subsection{Ista pokrivenost prilikom različitog broja iteracija}
 
-Još jedan od načina gde se može javiti ista pokrivenost koda za različite slučajeve upotrebe je prilikom postojanja petlji u programu. Pitanje koje je ovde ključno je da li različit broj iteracija predstavlja ispitivanje različite funkcionalnosti jer ukoliko postoji greška u kodu ona se neće nužno javiti priliom prve ili nekoliko prvih iteracija. Jedan od načina rešavanja ovog problema bi mogao biti da različit broj iteracija posmatramo kao različitu pokrivenost. Međutim nekada i to ne mora biti dovoljno. Posmatrajmo sledeći primer:
+Još jedan od načina gde se može javiti ista pokrivenost kôda za različite slučajeve upotrebe je prilikom postojanja petlji u programu. Pitanje koje je ovde ključno je da li različit broj iteracija predstavlja ispitivanje različite funkcionalnosti jer ukoliko postoji greška u kôdu ona se neće nužno javiti prilikom prve ili nekoliko prvih iteracija. Jedan od načina rešavanja ovog problema bi mogao biti da različit broj iteracija posmatramo kao različitu pokrivenost. Međutim nekada i to ne mora biti dovoljno. Posmatrajmo sledeći primer:
 
 Imamo funkciju koja kao parametar prima broj koji predstavlja broj iteracija petlje:
 
@@ -100,6 +100,7 @@ Imamo funkciju koja kao parametar prima broj koji predstavlja broj iteracija pet
 int f(int n) {
 	for (int i=0; i<n; i++) {
 		...
+	}
 }
 \end{lstlisting}
 
@@ -116,11 +117,11 @@ int main() {
 }
 \end{lstlisting}
 
-Za ulaze programa: \textbf{1 2 9} i \textbf{3 4 5} imamo potpuno istu pokrivenost čak i kada posmatramo broj izvršavanja. Sve linije u \textbf{main} funkciji će biti izvršene jednom a sve linije unutar petlje u funkciji \textbf{f} će biti izvršene po 12 puta. Naravno može se postaviti pitanje smislenosti ovakvih testova i da li ipak treba testirati funkciju f pojedinačno a ne po 3 puta ali u opštem slučaju problem pokrivenosti petlji nije lako rešiti. U radi se petlje pojednostavljuju i samo se posmatra da li je neka linija koda izvršena, a ne i koliko puta. 
+Za ulaze programa: \textbf{1 2 9} i \textbf{3 4 5} imamo potpuno istu pokrivenost čak i kada posmatramo broj izvršavanja. Sve linije u \textbf{main} funkciji će biti izvršene jednom a sve linije unutar petlje u funkciji \textbf{f} će biti izvršene po 12 puta. Naravno može se postaviti pitanje smislenosti ovakvih testova i da li ipak treba testirati funkciju f pojedinačno a ne po 3 puta ali u opštem slučaju problem pokrivenosti petlji nije lako rešiti. U ovom radu se petlje pojednostavljuju i samo se posmatra da li je neka linija kôda izvršena, a ne i koliko puta. 
 
 \subsection{Poverenje u rezultat}
 
-Zbog navedenih nedostataka postavlja se pitanje da li ovakvim ispitivanjem redudantnosti smemo doneti zaključak da je neki test suvišan. Ukoliko ne poznajemo testove koje proveravamo onda ne možemo doneti preciznu odliku samo na osnovu rezultata predstavljenog postupka. Dodatak koji bi mogao pomoći je da podatak o tome u odnosu na koje testove je neki test redudantan pa dalje možemo izvršiti ručnu proveru ili čak i proveru nekom dubljom analizom koji bi bilo potrebno tada razviti. U svakom slučaju možemo posmatrati rezultat na drugi način a to je da testove koji nisu proglašeni redudantnim sigurno treba zadržati.
+Zbog navedenih nedostataka postavlja se pitanje da li ovakvim ispitivanjem redudantnosti smemo doneti zaključak da je neki test suvišan. Ukoliko ne poznajemo testove koje proveravamo onda ne možemo doneti preciznu odliku samo na osnovu rezultata predstavljenog postupka. Dodatak koji bi mogao pomoći je da imamo podatak o tome u odnosu na koje testove je neki test redudantan pa dalje možemo izvršiti ručnu proveru ili čak i proveru nekom dubljom analizom koji bi bilo potrebno tada razviti. U svakom slučaju možemo posmatrati rezultat na drugi način a to je da testove koji nisu proglašeni redudantnim sigurno treba zadržati.
 
 \section{Implementacija}
 \label{sec:ideas}
@@ -171,11 +172,11 @@ int abs(int x)
 }
 \end{lstlisting}
 
-Za ovakvu izmenu kôda se može koristi Clang tačnije njegova biblioteka LibTooling uz pomoću koje je moguće obići AST stablo i izvršiti ,,source to source'' izmene. Drugi način bi bio korišćenje nekog alata koji prati izvršene naredbe kao što je gcov, koji dolazi sa GCC prevodiocem. Ovaj pristup se može pokazati manje efikasnim zbog velikog broja redudantnih informacija koje nudi. Ukoliko se radi pod pretpostavkom da su svi testovi ispravni, gcov će nuditi po jedan broj za svaku liniju kôda, gde može biti dovoljan samo jedan po bloku. Provera da li je jedan test redudantan u odnosu na drugi će i dalje biti linearna ali ovoga puta po broju linija koda, a ne po broju osnovnih blokova\footnote{Osnovni blok je niz instrukcija u kome će se sve instrukcije izvršiti od početka do kraja, nema labela (može samo prva), nema skoka i slično.} 
+Za ovakvu izmenu kôda se može koristi Clang tačnije njegova biblioteka LibTooling uz pomoću koje je moguće obići AST stablo i izvršiti ,,source to source'' izmene. Drugi način bi bio korišćenje nekog alata koji prati izvršene naredbe kao što je gcov, koji dolazi sa GCC prevodiocem. Ovaj pristup se može pokazati manje efikasnim zbog velikog broja redudantnih informacija koje nudi. Ukoliko se radi pod pretpostavkom da su svi testovi ispravni, gcov će nuditi po jedan broj za svaku liniju kôda, gde može biti dovoljan samo jedan po bloku. Provera da li je jedan test redudantan u odnosu na drugi će i dalje biti linearna ali ovoga puta po broju linija kôda, a ne po broju osnovnih blokova\footnote{Osnovni blok je niz instrukcija u kome će se sve instrukcije izvršiti od početka do kraja, nema labela (može samo prva), nema skoka i slično.} 
 
 Dok je provera između dva testa linearna to nije slučaj ukoliko se vrši kompletna provera svih testova. Ukoliko želimo da nađemo najmanji skup testova koji vrši isto pokrivanje kao i ceo skup onda nailazimo na problem minimalnog pokrivanja skupa. Ovo je poznati optimizacioni problem za koji je dokazano da je NP kompletan. Naš problem se jednostavno svodi na problem pokrivanja skupa. Skup koji pokrivamo je celokupni niz flegova. Svaki fleg je jedan element, a svaki test je jedan podskup koji sadrži samo one elemente koji odgovaraju aktiviranim flegovima za taj test. Problem pokrivanja skupa ima i približna rešenja koja se mogu iskoristiti zarad bolje vremenske efikasnosti. 
 
-U okviru projekta su implementirana tri algoritma za pokrivanje skupa: optimalni, pohlepni i algoritam provere redudantnosti koji proverava samo parove testova. Alat koristi samo optimalni, a ostali algoritmi predstavljaju ostatak procesa razvijanja rešenja, i upotrebljavani su privremeno, dok nije implementirana optimalnija verzija. Takođe je razvijen alat "with\_test\_info" \space koji je služio za proveru ispravnosti algoritama. Alat se može koristiti za proveru pokrivenosti koda ali se program mora pokrenuti u potpunosti. U direktorijumu mora postojati tekstualna datoteka sa nazivom "test\_info.run" \space koja opisuje način pokretanja programa. U datoteci se unose tri linije za svaki test koje redom predstavljaju: naziv testa, komanda kojom se pokreće program (najčešće "./test") i ulaz programa (koji može biti prazna linija).
+U okviru projekta su implementirana tri algoritma za pokrivanje skupa: optimalni, pohlepni i algoritam provere redudantnosti koji proverava samo parove testova. Alat koristi samo optimalni, a ostali algoritmi predstavljaju ostatak procesa razvijanja rešenja, i upotrebljavani su privremeno, dok nije implementirana optimalnija verzija. Takođe je razvijen alat "with\_test\_info" \space koji je služio za proveru ispravnosti algoritama. Alat se može koristiti za proveru pokrivenosti kôda ali se program mora pokrenuti u potpunosti. U direktorijumu mora postojati tekstualna datoteka sa nazivom "test\_info.run" \space koja opisuje način pokretanja programa. U datoteci se unose tri linije za svaki test koje redom predstavljaju: naziv testa, komanda kojom se pokreće program (najčešće "./test") i ulaz programa (koji može biti prazna linija).
 
 \section{Primeri}
 \label{sec:examples}
@@ -359,7 +360,7 @@ Postoji par detalja koje smo izostavili. Naime, gcov samo daje informaciju da li
 \label{sec:zakljucak}
 Na osnovu postignutih rezultata, može se primetiti da je ovaj problem izuzetno težak, i da ne postoji jedinstveno i najbolje (u smislu uspešnosti klasifikacije testova kao redudantnih/neredudantnih) automatizovano rešenje. Problem je moguće rešiti delimično, uz moguće greške poput lažno-pozitivnih klasifikovanja testova. Procenat lažno-pozitivnih klasifikovanja se može umanjiti detaljnijom analizom petlji/rekurzije, ali se ne može u potpunosti odstraniti, jer je sam pojam redudantnih testova nedovoljno jasno definisan, i nešto što za nekoga predstavlja redudantnost, za drugu osobu može predstavljati sasvim regularan i opravdan test. Dakle, u samu definiciju je uključena i subjektivnost, zbog čega se zaključuje da se ovakav tip alata ne može usavršiti do te mere da se greške uopšte ne javljaju.
 
-Rezultat dobijen našim alatom (metodologijom) treba uzeti sa dozom opreza, i potrebno je vršiti dodatnu analizu testova kako bi se utvrdilo da li neki od njih predstavlja lažno-pozitivno upozorenje. Lažno-pozitivni rezultati mogu se javiti u slučaju petlji i rekurzivnih poziva funkcija (i ne isključivo samo u tim situacijama), pošto metodologija uzima u obzir da li je neka linija koda izvršena, ali ne i to koliko je puta izvršena. To može predstavljati problem kod testova koji testiraju granične vrednosti. Mogu se izvesti dodatna poboljšanja preciznosti detaljnijom analizom petlji.
+Rezultat dobijen našim alatom (metodologijom) treba uzeti sa dozom opreza, i potrebno je vršiti dodatnu analizu testova kako bi se utvrdilo da li neki od njih predstavlja lažno-pozitivno upozorenje. Lažno-pozitivni rezultati mogu se javiti u slučaju petlji i rekurzivnih poziva funkcija (i ne isključivo samo u tim situacijama), pošto metodologija uzima u obzir da li je neka linija kôda izvršena, ali ne i to koliko je puta izvršena. To može predstavljati problem kod testova koji testiraju granične vrednosti. Mogu se izvesti dodatna poboljšanja preciznosti detaljnijom analizom petlji.
 
 \section{Moguća unapređenja}
 \label{sec:unapredjenja}
